fix scrollbar bug in sidenav

--- a/src/alto-ui/SideNav/SideNav.scss
+++ b/src/alto-ui/SideNav/SideNav.scss
@@ -5,7 +5,6 @@ $nav-btn-hover-text: $red-80;
 $nav-btn-hover-text-dark: $white;
 
 .sidenav {
-  box-shadow: inset 0 5px 0 $red;
   display: flex;
   transition: width $transition;
   position: relative;
@@ -16,18 +15,19 @@ $nav-btn-hover-text-dark: $white;
   }
 
   @include on-medium-and-wide {
+    box-shadow: inset 0 5px 0 $red, 1px 0 0 $coolgrey-20;
     padding-top: 5px;
     flex-direction: column;
     width: 200px;
     height: 100%;
-    border-right: 1px solid $coolgrey-20;
 
     &--dark {
-      border-right: $coolgrey-80;
+      box-shadow: inset 0 5px 0 $red, 1px 0 0 $coolgrey-80;
     }
   }
 
   @include on-narrow {
+    box-shadow: inset 0 5px 0 $red;
     align-items: center;
     padding: 5px .75rem 0;
     border-bottom: 1px solid $coolgrey-20;
